--- a/firmware/firmware/firmware.cbp
+++ b/firmware/firmware/firmware.cbp
@@ -41,7 +41,7 @@
 		</Linker>
 		<ExtraCommands>
 			<Add after="avr-size --mcu=atmega32 --format=avr $(TARGET_OUTPUT_FILE)" />
-			<Add after='[[ if (PLATFORM == PLATFORM_MSW) { print(_T(&quot;cmd /c &quot;)); } else { print (_T(&quot;sh &quot;)); } ]] avr-objdump -h -S $(TARGET_OUTPUT_FILE) &gt; $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).lss' />
+			<Add after='[[ if (PLATFORM == PLATFORM_MSW) { print(_T(&quot;cmd /c &quot;)); } else { print (_T(&quot;sh -c &quot;)); } ]] &quot;avr-objdump -h -S $(TARGET_OUTPUT_FILE) &gt; $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).lss&quot;' />
 			<Add after="avr-objcopy -R .eeprom -R .fuse -R .lock -R .signature -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).hex" />
 			<Add after="avr-objcopy --no-change-warnings -j .eeprom --change-section-lma .eeprom=0 -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).eep" />
 			<Mode after="always" />
