Add LCD HD44780 class

--- a/firmware/firmware/firmware.cbp
+++ b/firmware/firmware/firmware.cbp
@@ -54,6 +54,8 @@
 			<Add after="avr-objcopy --no-change-warnings -j .eeprom --change-section-lma .eeprom=0 -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).eep" />
 			<Mode after="always" />
 		</ExtraCommands>
+		<Unit filename="devices/LcdHd44780.cpp" />
+		<Unit filename="devices/LcdHd44780.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="serialInterfaces/Usart.cpp" />
 		<Unit filename="serialInterfaces/Usart.h" />
