Add $(PROJECT_DIR) compiler search directory to cbp file to make #includes work properly. #include directives with path starting in PROJECT_DIR can now be used. PROJECT_DIR is location of cbp file.

--- a/firmware/firmware/firmware.cbp
+++ b/firmware/firmware/firmware.cbp
@@ -41,6 +41,7 @@
 			<Add option="-fshort-enums" />
 			<Add option="-g3" />
 			<Add option="-DF_CPU=8000000UL" />
+			<Add directory="$(PROJECT_DIR)/" />
 		</Compiler>
 		<Linker>
 			<Add option="-mmcu=atmega32" />
