Add usart_printf and usart_printf_P to Usart.c

--- a/firmware/firmware/firmware.cbp
+++ b/firmware/firmware/firmware.cbp
@@ -58,7 +58,9 @@
 		<Unit filename="devices/LcdHd44780.cpp" />
 		<Unit filename="devices/LcdHd44780.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="serialInterfaces/Usart.c" />
+		<Unit filename="serialInterfaces/Usart.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="serialInterfaces/Usart.h" />
 		<Extensions>
 			<code_completion />
