--- a/firmware/firmware/firmware.cbp
+++ b/firmware/firmware/firmware.cbp
@@ -60,6 +60,14 @@
 		<Unit filename="devices/Ds3231.h" />
 		<Unit filename="devices/LcdHd44780.cpp" />
 		<Unit filename="devices/LcdHd44780.h" />
+		<Unit filename="devices/keyboard/KeyEvent.cpp" />
+		<Unit filename="devices/keyboard/KeyEvent.h" />
+		<Unit filename="devices/keyboard/Keyboard.cpp" />
+		<Unit filename="devices/keyboard/Keyboard.h" />
+		<Unit filename="devices/keyboard/KeyboardHAL.cpp" />
+		<Unit filename="devices/keyboard/KeyboardHAL.h" />
+		<Unit filename="devices/keyboard/KeyboardHALAVR.cpp" />
+		<Unit filename="devices/keyboard/KeyboardHALAVR.h" />
 		<Unit filename="fatFs/diskio.c">
 			<Option compilerVar="CC" />
 		</Unit>
