--- a/firmware/test/test.cbp
+++ b/firmware/test/test.cbp
@@ -26,6 +26,7 @@
 			<Add option="-std=c++11" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="KeyboardTest.cpp" />
 		<Unit filename="lib/catch.hpp" />
 		<Unit filename="main.cpp" />
 		<Extensions>
