--- a/firmware/firmware/firmware.cbp
+++ b/firmware/firmware/firmware.cbp
@@ -95,11 +95,15 @@
 		<Unit filename="gui/MenuItem.h" />
 		<Unit filename="gui/MenuView.cpp" />
 		<Unit filename="gui/MenuView.h" />
+		<Unit filename="gui/SetClockView.cpp" />
+		<Unit filename="gui/SetClockView.h" />
 		<Unit filename="gui/View.cpp" />
 		<Unit filename="gui/View.h" />
 		<Unit filename="gui/ViewStack.cpp" />
 		<Unit filename="gui/ViewStack.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="objects/DateTime.cpp" />
+		<Unit filename="objects/DateTime.h" />
 		<Unit filename="serialInterfaces/TwoWireInterface.cpp" />
 		<Unit filename="serialInterfaces/TwoWireInterface.h" />
 		<Unit filename="serialInterfaces/Usart.c">
